<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="main_text_nolog" translatable="false">Log.Hear</string>
    <string name="app_name" translatable="false">MCinaBox</string>
    <string name="app_version" translatable="false">v0.1.3</string>
    <string name="app_about_dependent_info" translatable="false">BoatApp (CosineMath,MIT)\nGson (Google,Apache 2.0)\nJNDCrash (ivanarh,Apache-2.0)\nXZ for Java (Lasse Collin,Public Domain)\nGL4ES (pitiSeb,MIT)\nOpenAL Soft (kcat,GPL-2.0)\nFileDownloader (lingochamp,Apache-2.0)\nBubbleLayout (MasayukiSuda)\nAndroidRocker (kongqw)\ncolorpicker (shixiuwen)</string>
    <string name="app_copyright" translatable="false">This non-release version, only after a holiday AOF software development team members to use inside!</string>
    <string name="tips_button_loaction_x" translatable="false">X:</string>
    <string name="tips_button_loaction_y" translatable="false">Y:</string>
    <string name="tips_launcher_private_path" translatable="false">/sdcard/Android/data/com.aof.mcinabox/files/MCinaBox</string>
    <string name="tips_launcher_public_path" translatable="false">/sdcard/MCinaBox</string>
    <string name="app_about_copyright_info" translatable="false">MCinaBox Copyright © 2020 longjunyu.</string>
    <string name="app_about_developer_info" translatable="false">longjunyu (MCinaBox ljy122@qq.com)\nand all project contributors</string>
    <string name="app_about_contributor_info" translatable="false">by-scott\nFrankOu2001\nMCredbear\nmiguelmazetto\nSalted fish King\nSnowFuryHQ</string>
    <string name="title_downloader_selected_versionid" translatable="false">_._._</string>
    <string name="title_language" translatable="false">Language</string>
    <string name="main_text_gamelist">All Versions</string>
    <string name="main_text_gamedir">Game Directories</string>
    <string name="main_text_launchersetting">Launcher Settings</string>
    <string name="main_text_launchercontrol">Virtual Keyboard Settings</string>
    <string name="main_text_defaultlayout">Home</string>
    <string name="app_about_mcinabox">MCinaBox Minecraft Launcher is a free, open-source Minecraft launcher, allowing players quick and easy installation and management on Android devices running game. </string>
    <string name="app_about_copyright">Copyright Notice</string>
    <string name="app_about_developer">Developers</string>
    <string name="app_about_contributor">Contributors</string>
    <string name="app_about_thanks">Acknowledgement</string>
    <string name="app_about_dependent">Depends</string>
    <string name="app_about_details">Declaration</string>
    <string name="app_about_opensource">Open Source</string>
    <string name="app_about_thanks_info">CosineMath (BoatApp, https://github.com/CosineMath/) launcher back-end support \nbangbang93 (BMCLAPI, http://bmclapi2.bangbang93.com/)\nApp icon provider MCreadbear\nAOF software development team </string>
    <string name="app_about_details_info">Minecraft all copyright Mojang AB, the use of this software copyright issues arising, software producers are not responsible. </string>
    <string name="app_about_opensource_info">https://github.com/longjunyu2/MCinaBox (GPLv3 open-source agreement to comply with this project, please comply with open source license requirements)</string>
    <string name="title_setting">Settings</string>
    <string name="title_launcher_private_path">Private directory</string>
    <string name="title_launcher_public_path">Public directory</string>
    <string name="title_minecraft_setting_basic">Basic</string>
    <string name="title_minecraft_setting_keyboard_layout">Keyboard Layout</string>
    <string name="title_minecraft_setting_memory_max">Max Memory (MB)</string>
    <string name="title_minecraft_setting_memory_hardware">Physical:</string>
    <string name="title_minecraft_setting_profession">Advanced</string>
    <string name="title_minecraft_setting_notcheck_jvm">Do not check compatibility JVM architecture</string>
    <string name="title_minecraft_setting_notcheck_mc">Do not check the integrity of Minecraft</string>
    <string name="title_backspace">Back</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_download">Download</string>
    <string name="title_downloader_selected_version">Selected version: </string>
    <string name="title_downloader_warn">If the list for a long time does not appear, manually click "Refresh"\nPlease wait for the download is complete, if the download is slow, try to replace other download sources</string>
    <string name="title_minecraft_version_stable">Release</string>
    <string name="title_minecraft_version_snapshot">Snapshot</string>
    <string name="title_minecraft_version_old">Old</string>
    <string name="title_install_newversion">Install version</string>
    <string name="title_install_gamepack">Install package</string>
    <string name="title_setting_minecraft">Global settings</string>
    <string name="title_user_newuser">Create new user</string>
    <string name="title_launcher">Launcher</string>
    <string name="title_gamedir">Game menu</string>
    <string name="title_game">Game</string>
    <string name="title_account">Account</string>
    <string name="title_user">User</string>
    <string name="title_manager">Management</string>
    <string name="title_select_version">Select version</string>
    <string name="title_game_launch">Start game</string>
    <string name="title_downloader_source">Download Source</string>
    <string name="title_launcher_setting_runtimepack">Import runtime</string>
    <string name="title_import">Import</string>
    <string name="title_about_auncher">About MCinaBox</string>
    <string name="title_runtime_package_name">Runtime package name</string>
    <string name="title_runtime_package_platform">Runtime architecture</string>
    <string name="title_runtime_package_releasetime">Release date</string>
    <string name="title_runtime_java_version">Java version</string>
    <string name="title_runtime_opengl_version">OpenGL version</string>
    <string name="title_runtime_openal_version">OpenAL version</string>
    <string name="title_runtime_lwjgl_version">LWJGL version</string>
    <string name="title_total_process">Total progress</string>
    <string name="title_current_process">Current task</string>
    <string name="title_current_version">Current version</string>
    <string name="title_version">"Version: "</string>
    <string name="title_offline">Offline</string>
    <string name="title_warn">Warning</string>
    <string name="title_unknown">Unknown</string>
    <string name="title_forge_installer">Forge Installer</string>
    <string name="title_install">Install</string>
    <string name="tips_launcher_path">Notice:Using "Private File" need not give MCinaBox write permission,but every thing in "Private File" will be lost if you uninstall MCinaBox!</string>
    <string name="tips_minecraft_setting_extra_javaargs">Java virtual machine parameters (do not fill)</string>
    <string name="tips_minecraft_setting_extra_mcargs">Minecraft additional parameters (do not fill)</string>
    <string name="tips_import_runtime">Please put the runtime package with suffix .tar.xz into /sdcard/Android/data/com.aof.mcinabox/files/MCinaBox/runtimepack  then import runtime library at Launcher Settings page</string>
    <string name="tips_check_setting">Please complete launcher configuration</string>
    <string name="tips_reflash_finish">Refresh complite</string>
    <string name="tips_online_version_reflash">Please refresh the list</string>
    <string name="tips_online_version_select">Please select a version</string>
    <string name="tips_online_version_notfound">Download failed,cannot find corresponding version</string>
    <string name="tips_online_version_downloadstart">Download start</string>
    <string name="tips_online_version_refresh_finish">Version of the list update is complete</string>
    <string name="tips_online_version_nodata">No game inventory data</string>
    <string name="tips_launcher_init_fail">Failed to initialize launcher</string>
    <string name="tips_launcher_save_fail">Failed to save launcher configuration</string>
    <string name="tips_launcher_new_fail">Failed to create launchet configuration model</string>
    <string name="tips_launcher_new_success">Succeeded to creat launcher configuration model</string>
    <string name="tips_launcher_load_fail">Failed to load launcher configuration</string>
    <string name="tips_launcher_load_bad">Launcher configuration file is broken</string>
    <string name="tips_user_nousername">Please enter your user name</string>
    <string name="tips_user_sameusername">This user already exists</string>
    <string name="tips_add_success">Added successfully</string>
    <string name="tips_runtime_notfound">Runtime does not exist</string>
    <string name="tips_runtime_installing">Installing runtime…</string>
    <string name="tips_runtime_install_success">Succeeded to install runtime</string>
    <string name="tips_runtime_install_fail">Failed to install runtime</string>
    <string name="tips_runtime_install_fail_exeable">Reason: failed to set permission</string>
    <string name="tips_ok">OK</string>
    <string name="tips_no">Cancеl</string>
    <string name="tips_button_name">Key name</string>
    <string name="tips_button_location">Location (Dp)</string>
    <string name="tips_button_mainkey">Primary key</string>
    <string name="tips_theme">Exterior</string>
    <string name="tips_button_size">Size (Dp)</string>
    <string name="tips_button_size_width">Width</string>
    <string name="tips_button_size_height">Height</string>
    <string name="tips_button_color">Colour</string>
    <string name="tips_button_corner_size">Fillet size</string>
    <string name="tips_function">Features</string>
    <string name="tips_button_autokeep">Automatically keep</string>
    <string name="tips_button_hide">Hidden key</string>
    <string name="tips_addone">Additional</string>
    <string name="tips_button_combine">Key combination</string>
    <string name="tips_button_combine_one">FirKey</string>
    <string name="tips_button_combine_two">SecKey</string>
    <string name="tips_step">Operations</string>
    <string name="title_user_name">Username</string>
    <string name="tips_user_namehint">user name or account</string>
    <string name="title_password">Password</string>
    <string name="tips_user_passwordhint">please enter your password</string>
    <string name="title_online">Online login</string>
    <string name="title_load">Import</string>
    <string name="title_model">Configuration</string>
    <string name="tips_keybard_choose">"Please select layout: "</string>
    <string name="tips_keyboard_path">"Path of layout file: "</string>
    <string name="title_filename">File name</string>
    <string name="title_put">Export</string>
    <string name="tips_keyboard_config_name_notfound">File name cannot be empty</string>
    <string name="tips_keyboard_config_size_toosmall">Button size cannot be less than 20</string>
    <string name="tips_keyboard_config_color_notfound">Button color cannot be empty</string>
    <string name="tips_keyboard_config_filename_notfound">File name cannot be empty</string>
    <string name="tips_put_success">Succeeded to export</string>
    <string name="tips_load_success">Succeeded to import</string>
    <string name="tips_load_fail">Failed to import</string>
    <string name="tips_keyboard_model_notfound">Cannot find layout file</string>
    <string name="tips_keyboard_config_location_notfound">Coordinate value cannot be empty</string>
    <string name="tips_keyboard_config_size_notfound">Width and height cannot be empty</string>
    <string name="tips_keyboard_button_notfound">Layout cannot be empty</string>
</resources>