<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_layout_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/puredark"
            android:text="@string/title_user_newuser"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_dark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/puredark"
                android:text="@string/title_user_name"/>
            <EditText
                android:id="@+id/dialog_edittext_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#8C8C8C"
                android:hint="@string/tips_user_namehint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/puredark"
                android:text="@string/title_password"/>
            <EditText
                android:id="@+id/dialog_edittext_input_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tips_user_passwordhint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/puredark"
                android:text="@string/title_online"/>
            <CheckBox
                android:id="@+id/dialog_checkbox_online_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/puredark"
                android:text="(开发中)"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dialog_button_confirm_createuser"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:textColor="@color/puredark"
                android:background="@drawable/background_layout_item"
                android:text="@string/tips_ok"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_button_cancle_createuser"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:textColor="@color/puredark"
                android:background="@drawable/background_layout_item"
                android:text="@string/tips_no"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>