<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout_fictionlist">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 可以添加其他的view -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_layout_item"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_downloader_source"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_mid" />

                    <Spinner
                        android:id="@+id/setting_spinner_downloadtype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/download_type"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_launcher_setting_runtimepack"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_mid" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/launchersetting_button_import"
                        style="@style/LauncherButton_1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/title_import" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_forge_installer"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_mid" />

                    <Spinner
                        android:id="@+id/launchersetting_spinner_forgeinstaller"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:textAlignment="gravity" />

                    <Button
                        android:id="@+id/launchersetting_button_forgeinstaller"
                        style="@style/LauncherButton_1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/title_install" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#00ffffff"
                android:text="@string/title_about_auncher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_layout_item"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_mcinabox"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_copyright"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_about_copyright_info"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_developer"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_about_developer_info"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_contributor"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <Button
                        android:id="@+id/setting_show_contributors"
                        style="@style/LauncherButton_1"
                        android:layout_height="15dp"
                        android:layout_width="20dp"
                        android:textSize="@dimen/text_small"
                        android:text="@string/title_show"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_thanks"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_about_thanks_info"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_dependent"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_about_dependent_info"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_details"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_about_details_info"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_about_opensource"
                        android:textColor="@color/puredark"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_about_opensource_info"
                        android:textColor="@color/puredark"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
