<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_noalpha">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_load"
            android:textColor="@color/text_title_main"
            android:textSize="@dimen/text_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="5dp"
            android:background="@android:color/background_dark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_title_main"
                android:textSize="@dimen/text_mid"
                android:text="@string/tips_keybard_choose"/>
            <Spinner
                android:id="@+id/dialog_spinner_modelselected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_model"
            android:textColor="@color/text_title_main"
            android:textSize="@dimen/text_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="5dp"
            android:background="@android:color/background_dark" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/text_title_main"
                android:textSize="@dimen/text_mid"
                android:text="@string/tips_keyboard_path"/>
            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_keyboard_path"
                android:textColor="@color/text_info"
                android:textSize="@dimen/text_small"
                android:textIsSelectable="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_step"
            android:textColor="@color/text_title_main"
            android:textSize="@dimen/text_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="5dp"
            android:background="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dialog_button_load"
                android:layout_marginStart="10dp"
                style="@style/LauncherButton_1"
                android:text="@string/tips_ok"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/dialog_button_cancelload"
                style="@style/LauncherButton_1"
                android:layout_marginEnd="10dp"
                android:text="@string/tips_no"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>